<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    tools:context=".presentation.screens.rate_selection.RateSelectionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:minHeight="350dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewCoin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/roundedImageView"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/textViewMainTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/kanit_light"
            android:text="@string/action_pick_rate"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageViewCoin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewMinTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/kanit_light"
            android:text="@string/text_min_value"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/textViewMainTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutMin"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="#8DFFFFFF"
            app:errorEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/textViewMinTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/kanit_light"
                android:hint="@string/text_min_value_in_usd"
                android:inputType="numberDecimal"
                android:textColor="@color/color_primary"
                android:textStyle="bold"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewMaxTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/kanit_light"
            android:text="@string/text_max_value"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutMin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutMax"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="#8DFFFFFF"
            app:errorEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/textViewMaxTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/kanit_light"
                android:hint="@string/text_max_value_in_usd"
                android:inputType="numberDecimal"
                android:textColor="@color/color_primary"
                android:textStyle="bold"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonUpsert"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/text_enable"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/color_primary"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutMax"
            app:layout_constraintVertical_bias="1"
            app:rippleColor="#8DEB5E28"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:strokeColor="@color/color_tertiary"
            app:strokeWidth="2dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonShowHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/text_history"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/color_primary"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toEndOf="@id/buttonDelete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonUpsert"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutMax"
            app:layout_constraintVertical_bias="1"
            app:rippleColor="#8DEB5E28"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:strokeColor="@color/color_tertiary"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/text_unfollow"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:backgroundTint="@color/color_primary"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonShowHistory"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutMax"
            app:layout_constraintVertical_bias="1"
            app:rippleColor="#8DEB5E28"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/color_tertiary"
            app:strokeWidth="2dp" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>